# SlicerGitSVNArchive

./: CMakeLists.txt  SuperBuild.cmake
Applications/SlicerApp/: CMakeLists.txt  Main.cxx  qSlicerAppMainWindow.cxx
Applications/SlicerQT/: Main.cxx  qSlicerMainWindow.cxx
Base/CLI/: CMakeLists.txt
Base/Logic/: CMakeLists.txt  vtkSlicerApplicationLogic.cxx  vtkSlicerTransformLogic.cxx
Base/QTApp/: qSlicerApplicationHelper.cxx  qSlicerApplicationHelper.txx
Base/QTCLI/: CMakeLists.txt  qSlicerCLIExecutableModuleFactory.cxx  qSlicerCLIExecutableModuleFactory.h  qSlicerCLILoadableModuleFactory.cxx  qSlicerCLILoadableModuleFactory.h  qSlicerCLIModule.cxx  qSlicerCLIModule.h  qSlicerCLIModuleFactoryHelper.cxx  qSlicerCLIModuleFrontendQtGui.cxx  qSlicerCLIModuleFrontendQtGui.h  qSlicerCLIModuleQtXslTransform.cxx  qSlicerCLIModuleQtXslTransform.h  qSlicerCLIModuleUIHelper.h  qSlicerCLIModuleUiLoader.cxx  qSlicerCLIModuleUiLoader.h  qSlicerCLIModuleWidget.cxx  qSlicerCLIModuleWidget.h  qSlicerCLIModuleWidget_p.h  qSlicerCLIProgressBar.cxx  qSlicerCLIProgressBar.h  qSlicerCLIScriptedModuleFactory.cxx  qSlicerCLIScriptedModuleFactory.h
Base/QTCore/: CMakeLists.txt  qSlicerCoreApplication.cxx  qSlicerCoreIOManager.cxx  qSlicerCorePythonManager.cxx  qSlicerExtensionsManagerModel.cxx  qSlicerExtensionsManagerModel.h  qSlicerLoadableModuleFactory.cxx  qSlicerLoadableModuleFactory.h  qSlicerSceneBundleReader.cxx
Base/QTGUI/: CMakeLists.txt  qSlicerApplication.cxx  qSlicerDirectoryListView.cxx  qSlicerDirectoryListView.h  qSlicerExtensionsInstallWidget.cxx  qSlicerExtensionsInstallWidget.h  qSlicerExtensionsManageWidget.cxx  qSlicerExtensionsManageWidget.h  qSlicerExtensionsManager.cxx  qSlicerExtensionsManager.h  qSlicerExtensionsRestoreWidget.cxx  qSlicerExtensionsWizardOverviewPage.cxx  qSlicerScriptedLoadableModule.cxx  qSlicerScriptedLoadableModuleFactory.cxx  qSlicerScriptedLoadableModuleWidget.cxx  qSlicerSettingsExtensionsPanel.cxx  qSlicerSettingsExtensionsPanel.h  qSlicerSettingsModulesPanel.cxx  qSlicerSettingsModulesPanel.h  qSlicerSettingsStylesPanel.cxx  qSlicerStyle.cxx  qSlicerStyle.h
CMake/: SlicerBlockCTKAppLauncherSettings.cmake  SlicerBlockCXXRequiredFlags.cmake  SlicerBlockInstallExtensionPackages.cmake  SlicerCPack.cmake  SlicerCPackBundleFixup.cmake.in  SlicerConfigureDisplayableManagerObjectFactory.cmake  SlicerExecutionModelExtraConfig.cmake.in  SlicerExtensionCPackBundleFixup.cmake.in  SlicerMacroBuildApplication.cmake  SlicerMacroBuildBaseQtLibrary.cmake  SlicerMacroBuildLoadableModule.cmake  SlicerMacroBuildModuleLogic.cmake  SlicerMacroBuildModuleMRML.cmake  SlicerMacroBuildModuleQtLibrary.cmake  SlicerMacroBuildModuleVTKLibrary.cmake  SlicerMacroBuildModuleWidgets.cmake  SlicerMacroBuildQtModule.cmake  SlicerMacroBuildQtPlugin.cmake  SlicerMacroBuildScriptedModule.cmake  SlicerMacroConfigureGenericCxxModuleTests.cmake  SlicerMacroConfigureGenericPythonModuleTests.cmake  SlicerMacroConfigureModuleCxxTestDriver.cmake  SlicerMacroPythonTesting.cmake  SlicerMacroPythonWrapModuleVTKLibrary.cmake  SlicerMacroSimpleTest.cmake  UseSlicer.cmake.in  vtkMacroKitPythonWrap.cmake
Extensions/CMake/: MIDASAPIDownloadExtension.cmake  SlicerBlockUploadExtension.cmake
Libs/FreeSurfer/: CMakeLists.txt
Libs/RemoteIO/: CMakeLists.txt
Modules/CLI/ACPCTransform/: CMakeLists.txt
Modules/CLI/DiffusionWeightedVolumeMasking/: CMakeLists.txt
Modules/CLI/ExecutionModelTour/: CMakeLists.txt
Modules/CLI/MergeModels/: CMakeLists.txt
Modules/CLI/ROITest/: CMakeLists.txt
Modules/CLI/TractographyLabelMapSeeding/: CMakeLists.txt
Modules/Loadable/: CMakeLists.txt
Modules/Loadable/Annotations/MRML/: vtkMRMLAnnotationNode.cxx  vtkMRMLAnnotationROINode.cxx
Modules/Loadable/Colors/: CMakeLists.txt
Modules/Loadable/Data/Widgets/Testing/: CMakeLists.txt
Modules/Loadable/Markups/MRML/: vtkMRMLMarkupsDisplayNode.cxx  vtkMRMLMarkupsDisplayNode.h  vtkMRMLMarkupsNode.cxx
Modules/Loadable/Markups/MRMLDM/: CMakeLists.txt  vtkMRMLMarkupsFiducialDisplayableManager2D.cxx  vtkMRMLMarkupsFiducialDisplayableManager3D.cxx
Modules/Loadable/Markups/VTKWidgets/: vtkMarkupsGlyphSource2D.cxx  vtkMarkupsGlyphSource2D.h
Modules/Loadable/Markups/Widgets/: qSlicerSimpleMarkupsWidget.cxx  qSlicerSimpleMarkupsWidget.h
Modules/Loadable/Models/: qSlicerModelsModuleWidget.cxx  qSlicerModelsModuleWidget.h
Modules/Loadable/Models/Logic/: vtkSlicerModelsLogic.cxx
Modules/Loadable/Models/Widgets/: qMRMLModelDisplayNodeWidget.cxx  qMRMLModelDisplayNodeWidget.h
Modules/Loadable/Reformat/: qSlicerReformatModuleWidget.cxx
Modules/Loadable/Segmentations/EditorEffects/Python/: SegmentEditorAutoCompleteEffect.py
Modules/Loadable/Segmentations/Widgets/: qMRMLSegmentEditorWidget.cxx
Modules/Loadable/SubjectHierarchy/MRML/: vtkMRMLSubjectHierarchyNode.cxx
Modules/Loadable/SubjectHierarchy/Testing/Cxx/: vtkSlicerSubjectHierarchyModuleLogicTest.cxx
Modules/Loadable/Volumes/Logic/: vtkSlicerVolumesLogic.h
Modules/Loadable/Volumes/Testing/Cxx/: CMakeLists.txt
Modules/Loadable/Volumes/Widgets/: CMakeLists.txt  qMRMLVolumeInfoWidget.cxx  qMRMLVolumeInfoWidget.h
Modules/Loadable/Volumes/Widgets/DesignerPlugins/: CMakeLists.txt  qMRMLVolumeInfoWidgetPlugin.h  qSlicerVolumesModuleWidgetsAbstractPlugin.cxx  qSlicerVolumesModuleWidgetsAbstractPlugin.h  qSlicerVolumesModuleWidgetsPlugin.cxx  qSlicerVolumesModuleWidgetsPlugin.h
Modules/Loadable/Volumes/Widgets/Testing/Cxx/: CMakeLists.txt  qMRMLVolumeInfoWidgetEventTranslatorPlayerTest1.cxx  qMRMLVolumeInfoWidgetTest1.cxx
SuperBuild/: External_CTK.cmake  External_ITKv4.cmake  External_LibArchive.cmake  External_OpenSSL.cmake  External_SimpleITK.cmake  External_SlicerExecutionModel.cmake  External_SlicerExtensionPackages.cmake  External_VTKv6.cmake  External_miniconda.cmake  External_python.cmake  SimpleITK_install_step.cmake.in  python_configure_step.cmake.in  python_install_step.cmake.in  tcl_configure_step.cmake.in  tcl_install_step.cmake.in  tcl_make_step.cmake.in  tk_configure_step.cmake.in  tk_install_step.cmake.in  tk_make_step.cmake.in
(+141 files in other folders)
